# wh-automation

./: .env.example  .gitignore  README.md  pyproject.toml
src/powerapps_time_cli/: __init__.py  __main__.py  calculations.py  calendar_generation.py  cli.py  client.py  config.py  models.py  payload.py  render.py  storage.py  validation.py
tests/: test_calculations.py  test_calendar_generation.py  test_payload.py
